<resources>
<string name="app_filter_class">com.lge.launcher3.hideapps.AppFilterImpl</string>
<string name="build_info_class" />
<string name="vpl_folder_name">/vendor/app/</string>
<string name="operator_phone_mode_uri">phone_mode_set</string>
<string name="config_t_wallpaper_packagename">com.lge.skt.twallpaper</string>
<string name="config_t_wallpaper_uri">http://skthemeshop.com/skt_home</string>
<string name="directv_widget_package_name">com.directv.dvrscheduler/com.directv.dvrscheduler.appwidget.WhatsHotAppWidgetProvider</string>
<string name="device_profile_name">G4</string>
<string name="action_reload_customcontent">com.lge.launcher3.intent.action.RELOAD_CUSTOMCONTENT</string>
<string name="action_show_setting">com.lge.launcher3.intent.action.SHOW_SETTING</string>
<string name="action_show_sbsetting">com.lge.launcher3.intent.action.SHOW_SBSetting</string>
<string name="action_show_recentuninstall">com.lge.launcher3.intent.action.SHOW_RECENTLY_UNINSTALLED_LIST</string>
<string name="action_show_delete_dialog">com.lge.launcher3.intent.action.SHOW_DELETE_DIALOG</string>
<string name="action_reload_tphonemode">com.lge.launcher3.intent.action.RELOAD_TPHONEMODE</string>
<string name="action_show_wallpaper_list_activity">com.lge.launcher3.intent.action.SHOW_WALLPAPER_LIST_ACTIVITY</string>
<string name="action_kill_process">com.lge.launcher3.intent.action.KILL_PROCESS</string>
<string name="action_launcher_resumed">com.lge.launcher3.intent.action.LAUNCHER_RESUMED</string>
<string name="action_show_reinstall_dialog">com.lge.launcher3.intent.action.SHOW_REINSTALL_DIALOG</string>
<string name="wallpaperpicker_autority">com.lge.launcer3.wallpaperpicker.autority</string>
<string name="action_finish_folderplus">com.lge.launcher3.intent.action.FINISH_FOLDERPLUS</string>
<string name="action_mdm_change_uninstallpolicy">com.lge.mdm.intent.action.packge.UNINSTALL_CHANGED</string>
<string name="partner_link_title">MyPartner Home</string>
<string name="partner_folder_title">MyPartner</string>
<string name="smartbulletin_apps_collection_code">00000000000000001594</string>
<string name="old_launcher_provider_uri">content://com.android.launcher2.settings/favorites?notify=true</string>
<string name="receive_launch_broadcasts_permission">com.lge.launcher3.permission.RECEIVE_LAUNCH_BROADCASTS</string>
<string name="receive_first_load_broadcast_permission">com.lge.launcher3.permission.RECEIVE_FIRST_LOAD_BROADCAST</string>
<string name="application_name">G5 Home by LR</string>
<string name="folder_name">Folder</string>
<string name="work_folder_name">Work</string>
<string name="activity_not_found">"App isn't installed."</string>
<string name="activity_not_available">"App isn't available"</string>
<string name="safemode_shortcut_error">Downloaded app disabled in Safe mode</string>
<string name="safemode_widget_error">Widgets disabled in Safe mode</string>
<string name="toggle_weight_watcher">Show Mem</string>
<string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
<string name="widget_dims_format">%1$d × %2$d</string>
<string name="all_apps_search_bar_hint">Search Apps</string>
<string name="all_apps_loading_message">Loading Apps…</string>
<string name="all_apps_no_search_results">No Apps found matching \"%1$s\"</string>
<string name="rename_action">OK</string>
<string name="cancel_action">Cancel</string>
<string name="out_of_space">No more room on this Home screen.</string>
<string name="hotseat_out_of_space">No more room in the Favorites tray</string>
<string name="all_apps_button_label">Apps</string>
<string name="all_apps_home_button_label">Home</string>
<string name="delete_target_label">Remove</string>
<string name="delete_target_uninstall_label">Uninstall</string>
<string name="info_target_label">App info</string>
<string name="cancel_target_label">@string/cancel_action</string>
<string name="disable_target_label">Disable</string>
<string name="permlab_install_shortcut">install shortcuts</string>
<string name="permdesc_install_shortcut">Allows an app to add shortcuts without user intervention.</string>
<string name="permlab_read_settings">read Home settings and shortcuts</string>
<string name="permdesc_read_settings">Allows the app to read the settings and shortcuts in Home.</string>
<string name="permlab_write_settings">write Home settings and shortcuts</string>
<string name="permdesc_write_settings">Allows the app to change the settings and shortcuts in Home.</string>
<string name="gadget_error_text">Problem loading widget</string>
<string name="gadget_setup_text">Setup</string>
<string name="uninstall_system_app_text">"This is a system app and can't be uninstalled."</string>
<string name="folder_hint_text">Unnamed Folder</string>
<string name="default_scroll_format">Page %1$d of %2$d</string>
<string name="workspace_scroll_format">Screen %1$d of %2$d</string>
<string name="apps_customize_apps_scroll_format">Apps page %1$d of %2$d</string>
<string name="apps_customize_widgets_scroll_format">Widgets page %1$d of %2$d</string>
<string name="first_run_cling_title">Welcome</string>
<string name="migration_cling_title">Copy your app icons</string>
<string name="migration_cling_description">Import icons and folders from your old Home screens?</string>
<string name="migration_cling_copy_apps">COPY ICONS</string>
<string name="migration_cling_use_default">START FRESH</string>
<string name="workspace_cling_longpress_title">Wallpapers, widgets, &amp; settings</string>
<string name="workspace_cling_longpress_description">Touch &amp; hold background to customize</string>
<string name="workspace_cling_longpress_dismiss">GOT IT</string>
<string name="folder_opened">Folder opened, %1$d by %2$d</string>
<string name="folder_tap_to_close">Touch to close folder</string>
<string name="folder_tap_to_rename">Touch to save rename</string>
<string name="folder_closed">Folder closed</string>
<string name="folder_renamed">Folder renamed to %1$s</string>
<string name="folder_name_format">Folder: %1$s</string>
<string name="debug_memory_activity">* HPROF</string>
<string name="widget_button_text">Widgets</string>
<string name="wallpaper_button_text">Wallpapers</string>
<string name="settings_button_text">Settings</string>
<string name="allow_rotation_title">Allow rotation</string>
<string name="package_state_unknown">Unknown</string>
<string name="abandoned_clean_this">Remove</string>
<string name="abandoned_search">Search</string>
<string name="abandoned_promises_title">This app is not installed</string>
<string name="abandoned_promise_explanation">"The app for this icon isn't installed. You can remove it, or search for the app and install it manually."</string>
<string name="action_add_to_workspace">Add to Home screen</string>
<string name="action_move_here">Move item here</string>
<string name="item_added_to_workspace">Item added to home screen</string>
<string name="item_removed">Item removed</string>
<string name="action_move">Move item</string>
<string name="move_to_empty_cell">Move to row %1$s column %2$s</string>
<string name="move_to_position">Move to position %1$s</string>
<string name="move_to_hotseat_position">Move to favorites position %1$s</string>
<string name="item_moved">Item moved</string>
<string name="add_to_folder">Add to folder: %1$s</string>
<string name="add_to_folder_with_app">Add to folder with %1$s</string>
<string name="added_to_folder">Item added to folder</string>
<string name="create_folder_with">Create folder with: %1$s</string>
<string name="folder_created">Folder created</string>
<string name="action_move_to_workspace">Move to Home screen</string>
<string name="action_move_screen_left">Move screen to left</string>
<string name="action_move_screen_right">Move screen to right</string>
<string name="screen_moved">Screen moved</string>
<string name="action_resize">Resize</string>
<string name="action_increase_width">Increase width</string>
<string name="action_increase_height">Increase height</string>
<string name="action_decrease_width">Decrease width</string>
<string name="action_decrease_height">Decrease height</string>
<string name="widget_resized">Widget resized to width %1$s height %2$s</string>
<string name="sp_launcher_description_NORMAL">Provides basic layout and settings for apps and widgets</string>
<string name="sp_menuless_launcher_description_NORMAL">Provides all apps on the Home screen</string>
<string name="gboard_intro_description">"Take charge today!
Tap here to start."</string>
<string name="sp_smartbulletin_optionmenu">Smart Bulletin settings</string>
<string name="smartbulletin">Smart Bulletin</string>
<string name="smartbulletin_summary">Include an additional Home screen showing customized info</string>
<string name="smartbulletin_settings">Settings</string>
<string name="smartbulletin_header_greeting_message01">Have a nice day!</string>
<string name="smartbulletin_header_greeting_message02">Good morning!</string>
<string name="smartbulletin_header_greeting_message03">Good evening!</string>
<string name="smartbulletin_header_greeting_message04">Good night!</string>
<string name="smartbulletin_header_special_message">Happy new year!</string>
<string name="smartbulletin_remove">Remove</string>
<string name="smartbulletin_cancel">Cancel</string>
<string name="smartbulletin_add">Add</string>
<string name="smartbulletin_selected_count">%d selected</string>
<string name="smartbulletin_select_all">Select all</string>
<string name="smartbulletin_removed">Removed</string>
<string name="smartbulletin_user_profile">User profile</string>
<string name="smartbulletin_collapse">Collapse</string>
<string name="smartbulletin_expand">Expand</string>
<string name="smartbulletin_exceed_limited_number">Up to %d categories can be selected</string>
<string name="smartbulletin_settings_on_off">Smart Bulletin on the Home screen will be removed. You can turn it on later in Home screen settings > Smart Bulletin.</string>
<string name="all_download_apps_button_label">Downloads</string>
<string name="sp_theme_download_button_label_NORMAL">Download</string>
<string name="sp_basic_theme_title_NORMAL">LG</string>
<string name="iconchange_deleted_message">Deleted</string>
<string name="yes">Yes</string>
<string name="no">No</string>
<string name="STR_LGHome_DELETE_NORMAL">Delete</string>
<string name="iconchange_option_menu_delete_button">Delete button</string>
<string name="sp_lowercase_internal_storage_NORMAL">internal storage</string>
<string name="sp_less_internal_storage_NORMAL">Not enough space on %s. Some actions are limited. Delete unused files to operate normally.</string>
<string name="sp_internal_storage_full_ics_NORMAL">Storage full</string>
<string name="sp_theme_apply_NORMAL">Apply</string>
<string name="delete_this_theme">Delete this theme?</string>
<string name="popup_btn_delete">DELETE</string>
<string name="sp_button_cancel1">CANCEL</string>
<string name="app_download_popup_message">The app must be downloaded to continue. Data charges may apply.</string>
<string name="cannot_download_themes">Cannot download themes for this user.</string>
<string name="sp_etc_lgsmartworld_SHORT">LG SmartWorld</string>
<string name="STR_LGHome_LOADING_NORMAL">Loading...</string>
<string name="sp_option_theme_NORMAL">Theme</string>
<string name="sp_preview_NORMAL">Preview</string>
<string name="sdcard_removed">SD card removed</string>
<string name="rename_folder_label">Folder name</string>
<string name="dynamic_gird_label">Grid</string>
<string name="iconchange_photo_icon_list_empty_message">"Tap 'Add new' button to create photo icon."</string>
<string name="iconchange_btn_create_photo_icon">Add new</string>
<string name="iconchange_select_size_desc">Drag the right bottom corner of the icon to resize it on the home screen.</string>
<string name="iconchange_btn_delete_icon">Delete</string>
<string name="sp_HomeScreenSettings_NORMAL">Home screen settings</string>
<string name="editmode_uninstalled_title">Uninstalled apps</string>
</resources>