<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:paddingTop="36.0dip" android:paddingBottom="24.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<TextView android:textSize="@dimen/cling_first_run_title_text_size" android:textColor="#e1000000" android:paddingLeft="36.0dip" android:paddingRight="36.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/first_run_cling_title" />
	<TextView android:textSize="@dimen/cling_title_text_size" android:textColor="#e1000000" android:paddingLeft="36.0dip" android:paddingRight="36.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.299988dip" android:text="@string/workspace_cling_longpress_title" android:fontFamily="sans-serif-medium" />
	<TextView android:textSize="@dimen/cling_longpress_description" android:textColor="#99000000" android:paddingLeft="36.0dip" android:paddingRight="36.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/workspace_cling_longpress_description" />
	<Button android:textSize="@dimen/cling_longpress_dismiss_longpress_info" android:textColor="#ffffffff" android:layout_gravity="end" android:id="@id/cling_dismiss_longpress_info" android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="27.0dip" android:layout_marginRight="12.0dip" android:text="@string/workspace_cling_longpress_dismiss" android:fontFamily="sans-serif-medium" style="?android:attr/buttonBarButtonStyle" />
</LinearLayout>
